--- a/FreePuzzle.UI/Pages/FetchData.razor
+++ b/FreePuzzle.UI/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using FreePuzzle.UI.Data
+@using FreePuzzle.Service.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
