--- a/FreePuzzle.UI/Shared/NavMenu.razor
+++ b/FreePuzzle.UI/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list" aria-hidden="true"></span>图标清单
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="FightAgainstLandlordAllCount">
+                <span class="oi oi-monitor" aria-hidden="true"></span>斗地主总数
+            </NavLink>
+        </li>
     </ul>
 </div>
 
